--- a/cart.html
+++ b/cart.html
@@ -63,7 +63,7 @@
             <div class="cart-summary">
                 <div class="cart-total">
                     <span>Tổng cộng:</span>
-                    <span id="cart-total-price">$0.00</span>
+                    <span id="cart-total-price">0.000.000VNĐ</span>
                 </div>
                 <button id="checkout-btn" class="btn btn-primary btn-block" disabled>Tiến hành thanh toán</button>
                 <button id="clear-cart-btn" class="btn btn-primary btn-block mt-2" disabled>Xóa giỏ hàng</button>
