--- a/courses-detail/automated-testing.html
+++ b/courses-detail/automated-testing.html
@@ -153,7 +153,7 @@
                 <div class="course-section instructor-section">
                     <h3>Giảng viên</h3>
                     <div class="instructor-card">
-                        <img src="img/instructor-john-doe.jpg" alt="Mr PLT" class="instructor-avatar">
+                        <img src="../image/GV2.jpg" alt="Mr Phuc" class="instructor-avatar">
                         <div class="instructor-details">
                             <h4>Mr PLT</h4>
                             <p class="instructor-title">Chuyên gia Phát triển Web Full-stack</p>
@@ -208,7 +208,7 @@
                     <div class="student-reviews-list">
                         <div class="review-item">
                             <div class="review-header">
-                                <img src="img/avatar-1.jpg" alt="Avatar" class="review-avatar">
+                                <img src="../image/chandung1.jpg" alt="Avatar" class="review-avatar">
                                 <div class="review-info">
                                     <span class="reviewer-name">Nguyễn Văn A</span>
                                     <div class="review-stars">
@@ -221,7 +221,7 @@
                         </div>
                         <div class="review-item">
                             <div class="review-header">
-                                <img src="img/avatar-2.jpg" alt="Avatar" class="review-avatar">
+                                <img src="../image/chandung2.jpg" alt="Avatar" class="review-avatar">
                                 <div class="review-info">
                                     <span class="reviewer-name">Trần Thị B</span>
                                     <div class="review-stars">
@@ -246,10 +246,10 @@
                         <span class="discount">50% Off</span>
                     </div>
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
-                    <button class="btn btn-primary btn-block add-to-cart-btn"
-                        data-course-id="web-dev-fullstack"
-                        data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
-                        data-course-price="4.500.000VNĐ">Thêm vào giỏ hàng</button>
+                    <button class="btn btn-primary btn-success add-to-cart-btn"
+                                data-course-id="automated-testing"
+                                data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
+                                data-course-price="4500000">Thêm vào giỏ hàng</button>
 
                     <div class="sidebar-features">
                         <h4>Khóa học bao gồm:</h4>
