--- a/courses-detail/basic-software-testing.html
+++ b/courses-detail/basic-software-testing.html
@@ -29,7 +29,7 @@
                             <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
-                            <li><a href="photography-detail.html">Nhiếp ảnh</a></li>>
+                            <li><a href="photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
                     </li>
                     <li><a href="../about.html">Về chúng tôi</a></li>
@@ -155,7 +155,7 @@
                 <div class="course-section instructor-section">
                     <h3>Giảng viên</h3>
                     <div class="instructor-card">
-                        <img src="img/instructor-john-doe.jpg" alt="Mr PLT" class="instructor-avatar">
+                        <img src="../image/GV3.png" alt="Ms Ngoan" class="instructor-avatar">
                         <div class="instructor-details">
                             <h4>Mr PLT</h4>
                             <p class="instructor-title">Chuyên gia Phát triển Web Full-stack</p>
@@ -210,7 +210,7 @@
                     <div class="student-reviews-list">
                         <div class="review-item">
                             <div class="review-header">
-                                <img src="img/avatar-1.jpg" alt="Avatar" class="review-avatar">
+                                <img src="../image/chandung1.jpg" alt="Avatar" class="review-avatar">
                                 <div class="review-info">
                                     <span class="reviewer-name">Nguyễn Văn A</span>
                                     <div class="review-stars">
@@ -223,7 +223,7 @@
                         </div>
                         <div class="review-item">
                             <div class="review-header">
-                                <img src="img/avatar-2.jpg" alt="Avatar" class="review-avatar">
+                                <img src="../image/chandung2.jpg" alt="Avatar" class="review-avatar">
                                 <div class="review-info">
                                     <span class="reviewer-name">Trần Thị B</span>
                                     <div class="review-stars">
@@ -248,10 +248,10 @@
                         <span class="discount">50% Off</span>
                     </div>
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
-                    <button class="btn btn-primary btn-block add-to-cart-btn"
-                        data-course-id="web-dev-fullstack"
-                        data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                        data-course-price="3.500.000VNĐ">Thêm vào giỏ hàng</button>
+                    <button class="btn btn-primary btn-success add-to-cart-btn"
+                                data-course-id="basic-software-testing"
+                                data-course-name="Khóa học Kiểm Thử Phần Mềm Căn Bản"
+                                data-course-price="3500000">Thêm vào giỏ hàng</button>
                     <div class="sidebar-features">
                         <h4>Khóa học bao gồm:</h4>
                         <ul>
