--- a/courses-detail/office-it.html
+++ b/courses-detail/office-it.html
@@ -154,7 +154,7 @@
                 <div class="course-section instructor-section">
                     <h3>Giảng viên</h3>
                     <div class="instructor-card">
-                        <img src="img/instructor-john-doe.jpg" alt="Mr PLT" class="instructor-avatar">
+                        <img src="../image/GV1.jpg" alt="Mr PLT" class="instructor-avatar">
                         <div class="instructor-details">
                             <h4>Mr PLT</h4>
                             <p class="instructor-title">Chuyên gia Phát triển Web Full-stack</p>
@@ -209,7 +209,7 @@
                     <div class="student-reviews-list">
                         <div class="review-item">
                             <div class="review-header">
-                                <img src="img/avatar-1.jpg" alt="Avatar" class="review-avatar">
+                                <img src="../image/chandung1.jpg" alt="Avatar" class="review-avatar">
                                 <div class="review-info">
                                     <span class="reviewer-name">Nguyễn Văn A</span>
                                     <div class="review-stars">
@@ -222,7 +222,7 @@
                         </div>
                         <div class="review-item">
                             <div class="review-header">
-                                <img src="img/avatar-2.jpg" alt="Avatar" class="review-avatar">
+                                <img src="../image/chandung2.jpg" alt="Avatar" class="review-avatar">
                                 <div class="review-info">
                                     <span class="reviewer-name">Trần Thị B</span>
                                     <div class="review-stars">
@@ -248,9 +248,9 @@
                     </div>
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
                     <button class="btn btn-primary btn-block add-to-cart-btn"
-                        data-course-id="web-dev-fullstack"
-                        data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                        data-course-price="49.99">Thêm vào giỏ hàng</button>
+                        data-course-id="office-it"
+                        data-course-name="Khóa học Tin Học Văn Phòng Toàn diện từ A-Z"
+                        data-course-price="4500000">Thêm vào giỏ hàng</button>
 
                     <div class="sidebar-features">
                         <h4>Khóa học bao gồm:</h4>
