--- a/courses-detail/software-testing.html
+++ b/courses-detail/software-testing.html
@@ -155,7 +155,7 @@
                 <div class="course-section instructor-section">
                     <h3>Giảng viên</h3>
                     <div class="instructor-card">
-                        <img src="img/instructor-john-doe.jpg" alt="Mr PLT" class="instructor-avatar">
+                        <img src="../image/chandung2.jpg" alt="Mr Phuc" class="instructor-avatar">
                         <div class="instructor-details">
                             <h4>Mr PLT</h4>
                             <p class="instructor-title">Chuyên gia Phát triển Web Full-stack</p>
@@ -249,9 +249,9 @@
                     </div>
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
                     <button class="btn btn-primary btn-block add-to-cart-btn"
-                        data-course-id="web-dev-fullstack"
-                        data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                        data-course-price="49.99">Thêm vào giỏ hàng</button>
+                        data-course-id="software-testing"
+                        data-course-name="Khóa Học Kiểm Thử Phần Mềm Toàn diện từ A-Z"
+                        data-course-price="4500000VNĐ">Thêm vào giỏ hàng</button>
                     <div class="sidebar-features">
                         <h4>Khóa học bao gồm:</h4>
                         <ul>
