--- a/courses.html
+++ b/courses.html
@@ -89,7 +89,7 @@
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="web-dev-fullstack"
                                 data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
-                                data-course-price="4.500.000">Thêm vào giỏ hàng</button>
+                                data-course-price="4500000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                     <div class="course-item">
@@ -116,7 +116,7 @@
                             <button class="btn btn-primary btn-sm btn-success add-to-cart-btn"
                                 data-course-id="data-science-intro"
                                 data-course-name="Khóa Học Kiểm Thử Phần Mềm Căn Bản"
-                                data-course-price="3.400.000VNĐ">Thêm vào giỏ hàng</button>
+                                data-course-price="3500000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                 </div>
@@ -140,12 +140,12 @@
                             Học các kỹ thuật chụp ảnh chuyên nghiệp và chỉnh sửa ảnh.
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$39.99</span>
+                            <span class="course-price">3.900.000VNĐ</span>
                             <a href="courses-detail/photography-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="photography-art"
                                 data-course-name="Nghệ thuật Nhiếp ảnh: Từ Cơ bản đến Nâng cao"
-                                data-course-price="39.99">Thêm vào giỏ hàng</button>
+                                data-course-price="3900000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                 </div>
@@ -169,12 +169,12 @@
                             Tìm hiểu các nguyên tắc cơ bản của quản lý dự án hiệu quả.
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$44.99</span>
+                            <span class="course-price">4.900.000VNĐ</span>
                             <a href="courses-detail/business-management-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="web-dev-fullstack"
-                                data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                                data-course-price="49.99">Thêm vào giỏ hàng</button>
+                                data-course-name="Khóa Học Phát triển Web Toàn diện từ A-Z"
+                                data-course-price="4900000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                     <div class="course-item">
@@ -199,9 +199,9 @@
                             <span class="course-price">4.500.000VNĐ</span>
                             <a href="./courses-detail/software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
-                                data-course-id="web-dev-fullstack"
-                                data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                                data-course-price="49.99">Thêm vào giỏ hàng</button>
+                                data-course-id="software-testing"
+                                data-course-name="Khóa học Kiểm Thử Phần Mềm Toàn diện từ A-Z"
+                                data-course-price="4500000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                 </div>
@@ -228,9 +228,9 @@
                             <span class="course-price">4.500.000VNĐ</span>
                             <a href="courses-detail/office-it.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
-                                data-course-id="web-dev-fullstack"
-                                data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                                data-course-price="4.500.000VNĐ">Thêm vào giỏ hàng</button>
+                                data-course-id="office-it"
+                                data-course-name="Khóa Học Tin Học Văn Phòng Toàn diện từ A-Z"
+                                data-course-price="4500000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                 </div>
