--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
                 <div id="auth-buttons" class="auth-buttons">
                     <a href="register.html" class="btn btn-primary" id="register-btn">Đăng ký</a>
-                    <a href="login.html" class="btn btn-secondary" id="login-btn">Đăng nhập</a>
+                    <a href="login.html" class="btn btn-primary" id="login-btn">Đăng nhập</a>
                     <a href="#" class="btn btn-primary" id="logout-btn" style="display: none;">Đăng xuất</a>
                 </div>
                 <button class="menu-toggle" aria-label="Mở Menu Điều Hướng">
