--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Nhập - Xưởng Thực Tập Solutions</title>
+    <title>Đăng Ký - Xưởng Thực Tập Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
@@ -12,33 +12,11 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body class="register-page">
-
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo">
                 <img src="image/anh2.png" alt="PLT Logo">
             </a>
-            <nav class="main-nav">
-                <ul class="nav-list">
-                    <li><a href="index.html">Trang chủ</a></li>
-                    <li class="has-dropdown">
-                        <a href="#">Khóa học <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="courses.html">Tất cả khóa học</a></li>
-                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                            <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
-                            <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
-                            <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">Về chúng tôi</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Liên hệ</a></li>
-                    <li><a href="privacy-policy.html">Chính sách bảo mật</a></li>
-                    <li><a href="terms-of-service.html">Điều khoản sử dụng</a></li>
-                </ul>
-            </nav>
         </div>
     </header>
 
