--- a/login.html
+++ b/login.html
@@ -12,31 +12,12 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body class="login-page">
-
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo">
                 <img src="image/anh2.png" alt="PLT Logo">
             </a>
-            <nav class="main-nav">
-                <ul class="nav-list">
-                    <li><a href="index.html">Trang chủ</a></li>
-                    <li class="has-dropdown">
-                        <a href="#">Khóa học <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="courses.html">Tất cả khóa học</a></li>
-                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                            <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
-                            <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
-                            <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">Về chúng tôi</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Liên hệ</a></li>
-                </ul>
-            </nav>
+        </div>
     </header>
 
     <section class="auth-section section-padding">
